--- a/out.html
+++ b/out.html
@@ -227,59 +227,55 @@
 <div class="row justify-content-around"><div class="col-auto"><b>«ءتل»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَتَلَ ◌ِ (أَتْل ، أَتَلَان)</div><div class="col" lang="en" dir="ltr">To walk at a quick pace. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Meeting at a dead person's house, funeral meeting. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتم»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مَأْتَم جـ. مَآتِمُ</div><div class="col" lang="en" dir="ltr">Meeting at a dead person's house, funeral meeting. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">She-ass.
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتن»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَتَان جـ. أُتُن ، آتُن ، أُتْن</div><div class="col" lang="en" dir="ltr">She-ass.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To buy a she-ass. To fall, to decline. 
+<div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْتَنَ</div><div class="col" lang="en" dir="ltr">To buy a she-ass. To fall, to decline. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">*Prov.* The ass became a she-ass i. e. He was honoured and 
+<div class="row justify-content-around"><div class="col-auto">كَان حِمَارًا فَاسْتَأْتَن</div><div class="col" lang="en" dir="ltr"><i>Prov.</i> The ass became a she-ass i. e. He was honoured and fell into contempt. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">fell into contempt. 
+<div class="row justify-content-around"><div class="col-auto">أَتُّون جـ. أُتُن ، أَتَاتِينُ</div><div class="col" lang="en" dir="ltr">Lime kiln, brick kiln. Furnace. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Lime kiln, brick kiln. Furnace. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتو»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَتَا ◌ُ (أَتْو ، إِتَاو)</div><div class="col" lang="en" dir="ltr">To produce (ground). To grow up abundantly (corn). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To produce (ground).
+<div class="row justify-content-around"><div class="col-auto">أَتْو</div><div class="col" lang="en" dir="ltr"><i>N. of. act.</i> Straight path. Manner.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To grow up abundantly (corn). 
+<div class="row justify-content-around"><div class="col-auto">إِتَاو</div><div class="col" lang="en" dir="ltr">Abundant produce.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">*N. of. act.* Straight path. Manner.
+<div class="row justify-content-around"><div class="col-auto">إِتَاوَة جـ. أَتَاوَىٰ</div><div class="col" lang="en" dir="ltr">Tribute, tax. Bribe.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Abundant produce.
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتي»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَتَىٰ ◌ِ (إِتْيَان ، أَتْي ، أُتِيّ ، إِتْيَانَة ، مَأْتَاة) ه ، هـ</div><div class="col" lang="en" dir="ltr">To come to a. o.'s house or to a place. To happen to a. o. To give as a gift. To undertake a thing, to make it. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Tribute, tax. Bribe.
+<div class="row justify-content-around"><div class="col-auto">أَتَى علي</div><div class="col" lang="en" dir="ltr">To ruin a. o. (fate). To accomplish. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To come to a. o.'s house or to a place.
+<div class="row justify-content-around"><div class="col-auto">-- ب</div><div class="col" lang="en" dir="ltr">To bring a. o. or a. th.  
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To happen to a. o. To give as a gift.
+<div class="row justify-content-around"><div class="col-auto">-- ه ب</div><div class="col" lang="en" dir="ltr">To present, to offer a. th. to a. o. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To undertake a thing, to make it. 
+<div class="row justify-content-around"><div class="col-auto">II أَتَّىٰ (تَأْتِيَة ، تَأْتٍ) هـ</div><div class="col" lang="en" dir="ltr">To make a passage (for water). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To ruin a. o. (fate). To accomplish. 
+<div class="row justify-content-around"><div class="col-auto">III آتَىٰ (مُؤَاتَاة) ه على</div><div class="col" lang="en" dir="ltr">To comply with the wishes of, to obey a. o. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To bring a. o. or a. th.  
+<div class="row justify-content-around"><div class="col-auto">-- ه</div><div class="col" lang="en" dir="ltr">+To suit a. o. (dress, climate).
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To present, to offer a. th. to a. o. 
+<div class="row justify-content-around"><div class="col-auto">IV آتَىٰ (إِيتَاء) ه هـ</div><div class="col" lang="en" dir="ltr">To give a. th. to a. o.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To make a passage (for water). 
+<div class="row justify-content-around"><div class="col-auto">V تَأَتَّىٰ مِن ، عَن</div><div class="col" lang="en" dir="ltr">To proceed, to derive from.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To comply with the wishes of, to obey a. o. 
+<div class="row justify-content-around"><div class="col-auto">-- ل</div><div class="col" lang="en" dir="ltr">To be prepared, disposed to. To happen  unexpectedly (mishap).  To become easy to a. o. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">+To suit a. o. (dress, climate).
+<div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْتَىٰ ه</div><div class="col" lang="en" dir="ltr">To urge a. o. to come. To deem a. o. to be slow. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To give a. th. to a. o.
+<div class="row justify-content-around"><div class="col-auto">آتٍ مـ. آتِيَة</div><div class="col" lang="en" dir="ltr">Who arrives, comer.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To proceed, to derive from.
+<div class="row justify-content-around"><div class="col-auto">الْآتِي</div><div class="col" lang="en" dir="ltr">The future, time to come.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To be prepared, disposed to. To happen  unexpectedly (mishap).  To become easy to a. o. 
-</div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To urge a. o. to come. To deem a. o. to be slow. 
-</div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Who arrives, comer.
-</div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">The future, time to come.
-</div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Front, opposite side. Place to which one goes or comes from. 
+<div class="row justify-content-around"><div class="col-auto">مَأْتًى</div><div class="col" lang="en" dir="ltr">Front, opposite side. Place to which one goes or comes from. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To be thick, close ( hair, grass). 
 </div></div>
