--- a/out.html
+++ b/out.html
@@ -78,9 +78,9 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">آبِدَة جـ. أَوَابِد</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبَد ، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
+<div class="row justify-content-around"><div class="col-auto">أَبَدِيّ ، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبَد</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
+<div class="row justify-content-around"><div class="col-auto">أَبَدِيَّة</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبَرَ ◌ِ ◌ُ (أَبْر ، إِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
@@ -140,9 +140,9 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">إِبِل جـ. آبَال ، أَبِيل</div><div class="col" lang="en" dir="ltr">Camels.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبِيل ، أَبِيل ، أَيْبُلِيّ جـ. آبَال ، أُبْل</div><div class="col" lang="en" dir="ltr">A sexton, monk, bell-ringer. 
+<div class="row justify-content-around"><div class="col-auto">أَبِيل ، أَبِيلِيّ ، أَيْبُلِيّ جـ. آبَال ، أُبْل</div><div class="col" lang="en" dir="ltr">A sexton, monk, bell-ringer. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">إِبَال ، إِبَّالَة</div><div class="col" lang="en" dir="ltr">Large fagot of wood. Management of property, of goods. 
+<div class="row justify-content-around"><div class="col-auto">إِبَالَة ، إِبَّالَة</div><div class="col" lang="en" dir="ltr">Large fagot of wood. Management of property, of goods. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَابِيلُ</div><div class="col" lang="en" dir="ltr">A troop (of camels or birds) following each other in a file. 
 </div></div>
@@ -162,7 +162,7 @@
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبه»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبَهَ ◌َ (أَبْه) ب ، ل</div><div class="col" lang="en" dir="ltr">To remember a. th. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">لَا يُؤْبَهُ لَهُ</div><div class="col" lang="en" dir="ltr">No one pays attention to it, unlieeded. 
+<div class="row justify-content-around"><div class="col-auto">لَا يُؤْبَهُ لَهُ</div><div class="col" lang="en" dir="ltr">No one pays attention to it, unheeded. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبَهَ ه ب</div><div class="col" lang="en" dir="ltr">To suspect a. o. of.
 </div></div>
@@ -179,7 +179,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">V تَأَبَّىٰ ه</div><div class="col" lang="en" dir="ltr">To consider as a father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبُ (عوض ابو) جـ. آبَاو</div><div class="col" lang="en" dir="ltr">Father.
+<div class="row justify-content-around"><div class="col-auto">أَبُ (عوض ابو) جـ. آبَاء</div><div class="col" lang="en" dir="ltr">Father.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبُو ، + بُو</div><div class="col" lang="en" dir="ltr">Father. <i>Word meaning causality or possession.</i>
 </div></div>
@@ -240,11 +240,11 @@
 <div class="row justify-content-around"><div class="col-auto">أَتُّون جـ. أُتُن ، أَتَاتِينُ</div><div class="col" lang="en" dir="ltr">Lime kiln, brick kiln. Furnace. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءتو»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَتَا ◌ُ (أَتْو ، إِتَاو)</div><div class="col" lang="en" dir="ltr">To produce (ground). To grow up abundantly (corn). 
+<div class="row justify-content-around"><div class="col-auto">I أَتَا ◌ُ (أَتْو ، إِتَاء)</div><div class="col" lang="en" dir="ltr">To produce (ground). To grow up abundantly (corn). 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَتْو</div><div class="col" lang="en" dir="ltr"><i>N. of. act.</i> Straight path. Manner.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">إِتَاو</div><div class="col" lang="en" dir="ltr">Abundant produce.
+<div class="row justify-content-around"><div class="col-auto">إِتَاء</div><div class="col" lang="en" dir="ltr">Abundant produce.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">إِتَاوَة جـ. أَتَاوَىٰ</div><div class="col" lang="en" dir="ltr">Tribute, tax. Bribe.
 </div></div>
@@ -257,7 +257,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- ه ب</div><div class="col" lang="en" dir="ltr">To present, to offer a. th. to a. o. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">II أَتَّىٰ (تَأْتِيَة ، تَأْتٍ) هـ</div><div class="col" lang="en" dir="ltr">To make a passage (for water). 
+<div class="row justify-content-around"><div class="col-auto">II أَتَّىٰ (تَأْتِيَة ، تَأَتٍّ) هـ</div><div class="col" lang="en" dir="ltr">To make a passage (for water). 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">III آتَىٰ (مُؤَاتَاة) ه على</div><div class="col" lang="en" dir="ltr">To comply with the wishes of, to obey a. o. 
 </div></div>
