added codes for participles and masdars for higher order verbs

--- a/out.html
+++ b/out.html
@@ -78,7 +78,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">آبِدَة جـ. أَوَابِد</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبَدِيّ ، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
+<div class="row justify-content-around"><div class="col-auto">أَبَدِيّ ، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَدِيَّة</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
@@ -93,7 +93,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">مِئْبَرَة جـ. مَآبِرُ</div><div class="col" lang="en" dir="ltr">Slander, backbiting.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">مَأْبُور</div><div class="col" lang="en" dir="ltr">Pricked; grafted. Sharp-pointed.
+<div class="row justify-content-around"><div class="col-auto">مَأْبُور</div><div class="col" lang="en" dir="ltr">Pricked; grafted. Sharp-pointed.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبز»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبَزَ ◌ِ (أَبْز ، أُبُوز)</div><div class="col" lang="en" dir="ltr">To dart forth, to rush, to leap (gazelle). 
@@ -157,7 +157,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أُبْنَة جـ. أُبَن</div><div class="col" lang="en" dir="ltr">Knot. Hatred, enmity.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">مَأْبُون</div><div class="col" lang="en" dir="ltr">Blameworthy. Suspicious. Unmanly, effeminate. 
+<div class="row justify-content-around"><div class="col-auto">مَأْبُون</div><div class="col" lang="en" dir="ltr">Blameworthy. Suspicious. Unmanly, effeminate. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبه»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبَهَ ◌َ (أَبْه) ب ، ل</div><div class="col" lang="en" dir="ltr">To remember a. th. 
@@ -208,7 +208,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">إِبَاء</div><div class="col" lang="en" dir="ltr">Refusal. Scorn.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">آبٍ</div><div class="col" lang="en" dir="ltr">Who refuses, who scorns.
+<div class="row justify-content-around"><div class="col-auto">آبٍ</div><div class="col" lang="en" dir="ltr">Who refuses, who scorns.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبِيّ</div><div class="col" lang="en" dir="ltr">Haughty,
 </div></div>
@@ -217,7 +217,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">V تَأَتَّبَ بِالْإِتْب</div><div class="col" lang="en" dir="ltr">To put on a shift, a coat of mail. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">مُؤَتَّب الظُّفْر</div><div class="col" lang="en" dir="ltr">Haviog crooked nails.
+<div class="row justify-content-around"><div class="col-auto">مُؤَتَّب الظُّفْر</div><div class="col" lang="en" dir="ltr">Haviog crooked nails.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءتد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">إِتَاد جـ. آتِدَة ، أُتُد</div><div class="col" lang="en" dir="ltr">Rope to fasten the feet of a cow, when milked. 
@@ -271,7 +271,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْتَىٰ ه</div><div class="col" lang="en" dir="ltr">To urge a. o. to come. To deem a. o. to be slow. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">آتٍ مـ. آتِيَة</div><div class="col" lang="en" dir="ltr">Who arrives, comer.
+<div class="row justify-content-around"><div class="col-auto">آتٍ مـ. آتِيَة</div><div class="col" lang="en" dir="ltr">Who arrives, comer.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">الْآتِي</div><div class="col" lang="en" dir="ltr">The future, time to come.
 </div></div>
@@ -288,7 +288,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَثّ ، أَثِيث</div><div class="col" lang="en" dir="ltr">Luxuriant (head of hair), tufted (hair). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">مُؤَثَّث</div><div class="col" lang="en" dir="ltr">+Furnished, supplied with furniture. 
+<div class="row justify-content-around"><div class="col-auto">مُؤَثَّث</div><div class="col" lang="en" dir="ltr">+Furnished, supplied with furniture. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءثر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَثَرَ ◌ُ ◌ِ (أَثْر ، أَثَارَة) هـ</div><div class="col" lang="en" dir="ltr">To relate (a fact).
@@ -303,7 +303,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">II أَثَّرَ في</div><div class="col" lang="en" dir="ltr">To imprint, to leave marks upon. To impress, to move. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">IV آثَرَ (إِيثَار) هـ</div><div class="col" lang="en" dir="ltr">To choose, to prefer a. th.
+<div class="row justify-content-around"><div class="col-auto">IV آثَرَ (إِيثَار) هـ</div><div class="col" lang="en" dir="ltr">To choose, to prefer a. th.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">— ه على</div><div class="col" lang="en" dir="ltr">To prefer a. o. to.
 </div></div>
@@ -331,16 +331,16 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَثِير جـ. أُثَرَاءُ</div><div class="col" lang="en" dir="ltr">Who wears traces of. Excellent. Ethereal atmosphere, 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">تَأْثِير</div><div class="col" lang="en" dir="ltr">Influence. Impression.
+<div class="row justify-content-around"><div class="col-auto">تَأْثِير</div><div class="col" lang="en" dir="ltr">Influence. Impression.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">مَأْثَرَة ، مَأْثُرَة جـ. مَآثِرُ</div><div class="col" lang="en" dir="ltr">Memorable fact, brilliant action. Benefit. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">مَأْثُور</div><div class="col" lang="en" dir="ltr">Transmitted by tradition. 
+<div class="row justify-content-around"><div class="col-auto">مَأْثُور</div><div class="col" lang="en" dir="ltr">Transmitted by tradition. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">مَؤَثِّر</div><div class="col" lang="en" dir="ltr">Moving, pathetic. 
+<div class="row justify-content-around"><div class="col-auto">مُؤَثِّر</div><div class="col" lang="en" dir="ltr">Moving, pathetic. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءثف»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">II أَثَّفَ (تَأْثِيف) هـ</div><div class="col" lang="en" dir="ltr">To prop a pot on a trivet. 
+<div class="row justify-content-around"><div class="col-auto">II أَثَّفَ (تَأْثِيف) هـ</div><div class="col" lang="en" dir="ltr">To prop a pot on a trivet. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أُثْفِيَّة جـ. أَثَافِيّ</div><div class="col" lang="en" dir="ltr">Support of a pot.
 </div></div>
@@ -355,7 +355,7 @@
 <div class="row justify-content-around"><div class="col-auto"><b>«ءثم»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَثِمَ ◌َ (إِثْم ، أَثَم ، مَأْثَم)</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">II أَثَّمَ ه</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">IV آثَمَ (إِيثَام) ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">IV آثَمَ (إِيثَام) ه</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">V تَأَثَّمَ مِن</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">إِثْم جـ. آثَام</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أَثِيم جـ. أُثَمَاءُ ، آثِم جـ. أَثَمَة</div><div class="col" lang="en" dir="ltr"></div></div>
@@ -380,8 +380,8 @@
 <div class="row justify-content-around"><div class="col-auto">I أَجَرَ ◌ُ (أَجْر ، أَجَار ، أُجُور)</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أُجِرَتْ يَدُهُ</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">II أَجَّرَ هـ</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">III آجَرَ (مُؤَاجَرَة) ه على ، في</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">IV آجَرَ (إِيجَار) ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">III آجَرَ (مُؤَاجَرَة) ه على ، في</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">IV آجَرَ (إِيجَار) ه</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">— ه ، هـ</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">VIII ٱِئْتَجَرَ</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْجَرَ ه ، هـ ب</div><div class="col" lang="en" dir="ltr"></div></div>
@@ -392,8 +392,8 @@
 <div class="row justify-content-around"><div class="col-auto">إِجَّار ، إِجَّارَة جـ. أَجَاجِيرُ</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">إِيجَار</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أَجِير جـ. أُجَرَاءُ ، + أُجَرِيّ</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">مُسْتَأْجِر</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">مُسْتَأْجَر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُسْتَأْجِر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُسْتَأْجَر</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءجز»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْجَزَ</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءجص»</b></div><div class="col" lang="en" dir="ltr"></div></div>
@@ -415,6 +415,6 @@
 <div class="row justify-content-around"><div class="col-auto">الْآجِل ، الْآجِلَة</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">آجِلًا أَوْ عَاجِلًا</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">مَأْجَل المَاء جـ. مَآجِلُ</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">مُؤَجَّل</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُؤَجَّل</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr"></div></div>
 </div></body></html>
